[package]
name = "casper-litmus-wasm"
description = "The Casper Blockchain's light-client WASM library"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
casper-litmus = { path = "../casper-light-client" }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
