[package]
name = "casper-litmus-wasm"
description = "The Casper Blockchain's light-client WASM library"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
casper-litmus = { git = "https://github.com/cspr-rad/litmus" }
casper-types = "4.0.1"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = { version = "1.0.116", default-features = false }
wasm-bindgen = "0.2.92"
